--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.26.3",
     "formik": "^2.0.7",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
